tests/jastadd/negative/type_errors/L3/10_UserDefinedProcCallPars3.ob
MODULE TestModule;
	PROCEDURE f(a, b : INTEGER; c : INTEGER);
	BEGIN
		Write(a);
		Write(b);
		Write(c)	
	END f;
BEGIN
	f(1, 2, 3);     (* OK *)
	f(1, 2, 3, 4)   (* NOT OK *)
END TestModule.
